--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "modern-normalize": "^3.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-loading": "^2.0.3",
     "react-scripts": "5.0.1",
     "sass": "^1.79.4",
     "web-vitals": "^2.1.4"
@@ -42,6 +43,7 @@
     ]
   },
   "devDependencies": {
+    "customize-cra": "^1.0.0",
     "gh-pages": "^6.1.1",
     "react-app-rewired": "^2.2.1"
   }
